--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^0.10.0",
+    "@ampproject/eleventy-plugin-amp": "^0.1.0",
     "concurrently": "^5.1.0",
     "node-sass": "^4.13.1"
   },
